fix(landing): remove changing icon size by hover on mobile(#10)

--- a/src/app/@theme/components/icon-list/icon-list.component.scss
+++ b/src/app/@theme/components/icon-list/icon-list.component.scss
@@ -96,13 +96,6 @@
         width: 1.5rem;
         height: 1.5rem;
       }
-
-      &:hover {
-        i {
-          width: 2rem;
-          height: 2rem;
-        }
-      }
     }
   }
 
@@ -123,13 +116,6 @@
       i {
         width: 1.5rem;
         height: 1.5rem;
-      }
-
-      &:hover {
-        i {
-          width: 2rem;
-          height: 2rem;
-        }
       }
     }
   }
